--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "axios": "^1.9.0",
     "canvas": "^3.1.0",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "html-pdf": "^3.0.1",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
